[tool.poetry]
name = "hypertag"
version = "0.1.0"
description = "File organization made easy using tags"
authors = ["Sean <sean-p-96@hotmail.de>"]
license = "MIT"
homepage = "https://github.com/SeanPedersen/HyperTag"
repository = "https://github.com/SeanPedersen/HyperTag"
keywords = ["tag", "file", "organization"]
classifiers = [
    "Environment :: Console",
    "Framework :: Fire",
    "Operating System :: Linux",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.3.1"
tqdm = "^4.55.0"
filetype = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
